--- a/admin/api/sp_get_order_info.phtml
+++ b/admin/api/sp_get_order_info.phtml
@@ -72,8 +72,8 @@
 		'--------------------------------------------------------------------------------
 		shipping_address_id = rsOrder("shipping_address_id")
 		order_shipping_company = rsOrder("ShipCompany")
-		order_shipping_firstname = rsOrder("ShipLastName")
-		order_shipping_lastname = rsOrder("ShipFirstName")
+		order_shipping_firstname = rsOrder("ShipFirstName")
+		order_shipping_lastname = rsOrder("ShipLastName")
 		order_shipping_address = rsOrder("ShipAddress")
 		order_shipping_city = rsOrder("ShipCity")
 		order_shipping_state = rsOrder("ShipState")
