--- a/admin/catalog_inventory.phtml
+++ b/admin/catalog_inventory.phtml
@@ -14,6 +14,8 @@
 <link href="../assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
 <link href="../assets/global/plugins/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />
 <link href="../assets/global/plugins/fancybox/source/jquery.fancybox.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/bootstrap-modal/css/bootstrap-modal-bs3patch.css" rel="stylesheet" type="text/css" />
+<link href="../assets/global/plugins/bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" type="text/css" />
 <!-- END PAGE LEVEL PLUGINS -->
 <!--#INCLUDE FILE="include/head_bottom.phtml"-->
 </head>
@@ -44,13 +46,14 @@
 										<div class="portlet light portlet-fit portlet-datatable">
 											<div class="portlet-title">
 												<div class="caption">
-													<i class="icon-cloud-upload"></i>Product Listing 
+													<i class="icon-cloud-upload"></i>Inventory Management
 												</div>
 												<div class="actions">
 													<a href="catalog_product_detail.phtml?pf_id=0" class="btn btn-circle btn-info">
 														<i class="fa fa-plus"></i>
-														<span class="hidden-xs"> New Product </span>
+														<span class="hidden-xs"> New Inventory </span>
 													</a>
+													<!--
 													<div class="btn-group">
 														<a class="btn btn-circle btn-default dropdown-toggle" href="javascript:;" data-toggle="dropdown">
 															<i class="fa fa-share"></i>
@@ -73,21 +76,24 @@
 															</li>
 														</div>
 													</div>
+													-->
 												</div>
 											</div>
 											<div class="portlet-body">
 												<div class="table-container">
+													<!--
 													<div class="table-actions-wrapper">
 														<span> </span>
 														<select class="table-group-action-input form-control input-inline input-small input-sm">
 															<option value="">Select...</option>
-															<option value="active">Active</option>
-															<option value="inactive">Inactive</option>
+															<option value="publish">Publish</option>
+															<option value="unpublished">Un-publish</option>
 															<option value="delete">Delete</option>
 														</select>
 														<button class="btn btn-sm btn-success table-group-action-submit">
 															<i class="fa fa-check"></i> Submit</button>
 													</div>
+													-->
 													<table class="table table-striped table-bordered table-hover table-checkable" id="datatable_products">
 														<thead>
 															<tr role="row" class="heading">
@@ -98,7 +104,6 @@
 																	</label>
 																</th>
 																<th width="8%"> ID </th>
-																<th width="5%"> &nbsp; </th>
 																<th width="200"> Product&nbsp;Name </th>
 																<th width="100"> SKU </th>
 																<th width="8%"> Cost </th>
@@ -112,7 +117,6 @@
 																<td>
 																	<input type="text" class="form-control form-filter input-sm" name="product_id" value="<%=Session("DT_CATALOG_PRODUCT_1_ID")%>"> 
 																</td>
-																<td> </td>
 																<td>
 																	<input type="text" class="form-control form-filter input-sm" name="product_name" value="<%=Session("DT_CATALOG_PRODUCT_1_NAME")%>"> 
 																</td>
@@ -140,9 +144,9 @@
 																<td>
 																	<select name="product_status" class="form-control form-filter input-sm">
 																		<option value="">Select...</option>
-																		<option value="0">Active</option>
-																		<option value="1">Call for Avaialability</option>
-																		<option value="2">Inactive</option>
+																		<option value="1">In Stock</option>
+																		<option value="0">Out of Stock</option>
+																		<option value="2">Low Stock</option>
 																	</select>
 																</td>
 																<td>
@@ -181,6 +185,7 @@
 		</div>
 	</div>
 </div>
+<div id="ajax-modal3" class="modal fade" tabindex="-1" style="display: none;"></div>
 <!--#INCLUDE FILE="include/js.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
 <script src="../assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
@@ -191,19 +196,49 @@
 <script src="../assets/global/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js" type="text/javascript"></script>
 <script src="../assets/global/plugins/bootstrap-maxlength/bootstrap-maxlength.min.js" type="text/javascript"></script>
 <script src="../assets/global/plugins/fancybox/source/jquery.fancybox.pack.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/bootstrap-modal/js/bootstrap-modalmanager.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/bootstrap-modal/js/bootstrap-modal.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL PLUGINS -->
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
+<script>
+var grid;
+//MODAL
+var UIModals = function () {
+	//function to initiate bootstrap extended modals
+	var initModals = function () {
+		$.fn.modalmanager.defaults.resize = true;
+		$.fn.modal.defaults.spinner = $.fn.modalmanager.defaults.spinner =
+			'<div class="loading-spinner" style="width: 200px; margin-left: -100px;">' +
+			'<div class="progress progress-striped active">' +
+			'<div class="progress-bar" style="width: 100%;"></div>' +
+			'</div>' +
+			'</div>';
+			
+		var $modal = $('#ajax-modal');
+		$('#wysiwyg_description').on('click', function () {
+			$('body').modalmanager('loading');
+			setTimeout(function () {
+				$modal.load('api/modal_ajax_wysiwyg_editor.phtml?id=page_text&fid=1', '', function () {
+					$modal.modal();
+				});
+			}, 100);
+		});
+		$modal.on('click', '.update_1', function () {
+			editor_1.updateElement();
+			$('#page_text').val($('#wysiwig_text_1_1').val());
+			$modal.modal('hide');
+		});
+		
+	};
+	return {
+		init: function () {
+			initModals();
+		}
+	};
+}();
+</script>
 <script type="text/javascript">
- var grid;
-var iFilter = 1;
-<%
-	if Len(Session("DT_CATALOG_PRODUCT_1_ID")) > 0 OR Len(Session("DT_CATALOG_PRODUCT_1_NAME")) > 0 OR Len(Session("DT_CATALOG_PRODUCT_1_SKU")) > 0 OR Len(Session("DT_CATALOG_PRODUCT_1_COST_FROM")) > 0 OR Len(Session("DT_CATALOG_PRODUCT_1_COST_TO")) > 0 _
-	OR Len(Session("DT_CATALOG_PRODUCT_1_PRICE_FROM")) > 0 OR Len(Session("DT_CATALOG_PRODUCT_1_PRICE_TO")) > 0 OR Len(Session("DT_CATALOG_PRODUCT_1_QTY_FROM")) > 0 OR  Len(Session("DT_CATALOG_PRODUCT_1_QTY_TO")) > 0 OR Len(Session("DT_CATALOG_PRODUCT_1_STATUS")) > 0 then
-%>
-iFilter = 0;
-<%
-	end if
-%>
+
 var EcommerceProducts = function () {
 
     var initPickers = function () {
@@ -220,14 +255,54 @@ var EcommerceProducts = function () {
         grid.init({
             src: $("#datatable_products"),
             onSuccess: function (grid) {
-                // execute some code after table records loaded
-				//grid.ajax.url("api/sp_product_list.phtml");
-				if (iFilter == 0)
-				{
-					grid.submitFilter();
-					iFilter = 1;
-				}
             },
+			onDataLoad: function (grid) {
+				$('.edit-qty').on('change', function () {
+					var inventory_id = $(this).data('id');
+					$.ajax({
+						url: 'api/sp_product_inventory_update.phtml',
+						data: 'mode=uq&inventory_id=' + inventory_id + "&qty=" + $(this).val(),
+						type : 'post',
+						success:function(data) {
+						},
+						error: function(errorThrown){
+						}
+					});
+				});
+				$('.edit-avail').on('change', function () {
+					var inventory_id = $(this).data('id');
+					$.ajax({
+						url: 'api/sp_product_inventory_update.phtml',
+						data: 'mode=ua&inventory_id=' + inventory_id + "&avail=" + $(this).val(),
+						type : 'post',
+						success:function(data) {
+						},
+						error: function(errorThrown){
+						}
+					});
+					
+					if ($(this).val() == "1")
+					{
+						$(this).css("background-color", "#5c9bd1");
+					}
+					else
+					{
+						$(this).css("background-color", "#e08283");
+					}
+				});
+				/*
+				var $modal3 = $('#ajax-modal3');
+				$('.modal-edit-line').on('click', function () {
+					$('body').modalmanager('loading');
+					var modal_mfg_id = $(this).data('id');
+					setTimeout(function () {
+						$modal3.load('api/modal_ajax_mfg_edit.phtml?mfg_id=' + modal_mfg_id, '', function () {
+							$modal3.modal();
+						});
+					}, 500);
+				});
+				*/
+			},
             onError: function (grid) {
                 // execute some code on network or other general error  
             },
@@ -240,9 +315,9 @@ var EcommerceProducts = function () {
                 //"dom": "<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'<'table-group-actions pull-right'>>r>t<'row'<'col-md-8 col-sm-12'pli><'col-md-4 col-sm-12'>>",
 				
 				columnDefs: [ 
-					{ orderable: false, targets: [0,2,9] },
-					{ className: "text-center", targets: [2,8] },
-					{ className: "text-right", targets: [5,6,7] }
+					{ orderable: false, targets: [0,8] },
+					{ className: "text-center", targets: [1] },
+					{ className: "text-right", targets: [4,5] }
 				],
 				"bStateSave": true,
                 "lengthMenu": [
@@ -251,7 +326,7 @@ var EcommerceProducts = function () {
                 ],
                 "pageLength": 20, // default record count per page
                 "ajax": {
-                    "url": "api/sp_product_list.phtml", // ajax source
+                    "url": "api/sp_product_inventory_list.phtml", // ajax source
                 },
                 "order": [
                     [1, "desc"]
@@ -310,12 +385,14 @@ var EcommerceProducts = function () {
 
 jQuery(document).ready(function() {    
    EcommerceProducts.init();
+   //UIModals.init();
    $('.form-filter').keypress(function (e) {
 	  if (e.which == 13) {
 		EcommerceProducts.submitFilter();
 		return false; 
 	  }
 	});
+   
 });	
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
