--- a/admin/include/header.phtml
+++ b/admin/include/header.phtml
@@ -174,6 +174,11 @@
 									<i class="icon-folder-alt"></i> Manage Categories
 								</a>
 							</li>
+							<li <% if InStr(current_menu,"catalog_inventory") then%>class="active"<% end if %>>
+								<a href="catalog_inventory.phtml" class="nav-link">
+									<i class="icon-equalizer"></i> Manage Inventory
+								</a>
+							</li>
 							<li <% if InStr(current_menu,"catalog_manufacturer") then%>class="active"<% end if %>>
 								<a href="catalog_manufacturer.phtml" class="nav-link">
 									<i class="icon-globe-alt"></i> Manage Manufacturers
