--- a/theme/journal4/include/js.phtml
+++ b/theme/journal4/include/js.phtml
@@ -5,6 +5,8 @@
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/respond/respond.js?j2v=2.7.6"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/sticky/jquery.sticky.js?j2v=2.7.6"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/init.js?j2v=2.7.6"></script>
+<script src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
+<script src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
 <% if g_route_page_id = "index" then %>
 <script>
 $(document).ready(function () {
@@ -81,7 +83,63 @@ $(document).ready(function () {
 
 <% end if %>
 <% if g_route_page_id = "login" then %>
+<script language="javascript">
+var FormValidation = function () {
+	var loginValidation1 = function() {
+		var form1 = $('#login-form');
+		var error1 = $('.alert-danger', form1);
+		var success1 = $('.alert-success', form1);
 
+		form1.validate({
+			
+			//RULES
+			rules: {
+				login_email: {
+					required: true,
+					email: true
+				},
+				login_password: {
+					required: true
+				}
+			},
+			messages: {
+				login_email: {
+					required: "Please enter your email address.",
+					email : "Please enter a valid email address."
+				},
+				login_password: {
+					required: "Please enter your password."
+				}
+			},
+			
+			highlight: function (element) { // hightlight error inputs
+
+				$(element)
+					.closest('.form-group').addClass('has-error'); // set error class to the control group
+			},
+
+			unhighlight: function (element) { // revert the change done by hightlight
+				$(element)
+					.closest('.form-group').removeClass('has-error'); // set error class to the control group
+			}
+			
+		});
+
+	}
+	return {
+		//main function to initiate the module
+		init: function () {
+			loginValidation1();
+		}
+	};
+
+}();
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function() { 
+   FormValidation.init();
+});
+</script>
 <% end if %>
 
 <% if g_route_page_id = "register" then %>
